# steam-shortcuts-editor

./: Cargo.toml  README.md  package.json  shortcuts.vdf
cpp/: CMakeLists.txt  README.md  package.json  test.txt
cpp/src/: logging.hpp  main.cpp  shortcuts.cpp  shortcuts.hpp
examples/: cpp_output.json  cpp_output.vdf  rust_output.json  rust_output.vdf
rust/: Cargo.toml  README.md  package.json  shortcuts_sd.vdf
rust/src/: main.rs  shortcuts.rs
src/: main.rs  shortcuts.rs
