[package]
name = "steam-shortcuts-editor"
version = "0.1.0"
authors= ["Magius(CHE) - magiusche@magius.it"]
homepage = "https://github.com/magiusche/steam-shortcuts-editor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0"
lazy_static= "1"
iter_tools= "0"
exitcode= "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
byteorder = "1.4.3"

